--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.18",
     "lucide-react": "^0.258.0",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4",
     "next": "^13.4.8",
+    "next-auth": "^4.22.1",
+    "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.13.2",
