--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.18",
+    "fs-extra": "^11.1.1",
     "lucide-react": "^0.258.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
@@ -45,13 +46,16 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
